--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "fr.hugofnm.unice.notes"
     },
     "web": {
       "favicon": "./assets/favicon.png"
