--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/material-bottom-tabs": "^6.2.12",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "expo": "~47.0.12",
+    "expo-device": "~5.0.0",
     "expo-local-authentication": "~13.0.2",
+    "expo-notifications": "~0.17.0",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-web-browser": "~12.0.0",
