--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.4",
-    "@react-navigation/material-bottom-tabs": "^6.2.12",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "expo": "~47.0.12",
     "expo-device": "~5.0.0",
+    "expo-file-system": "~15.1.1",
     "expo-local-authentication": "~13.0.2",
     "expo-notifications": "~0.17.0",
     "expo-secure-store": "~12.0.0",
@@ -22,6 +21,7 @@
     "expo-web-browser": "~12.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-fast-image": "^8.6.3",
     "react-native-paper": "^5.1.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0"
