--- a/eas.json
+++ b/eas.json
@@ -27,7 +27,7 @@
         "resourceClass": "m1-medium"
       },
       "android": {
-        "buildType": "apk"
+        "buildType": "aab"
       }
     }
   },
