--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~6.0.0",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
-    "expo": "~47.0.12",
-    "expo-device": "~5.0.0",
-    "expo-file-system": "~15.1.1",
-    "expo-local-authentication": "~13.0.2",
-    "expo-notifications": "~0.17.0",
-    "expo-secure-store": "~12.0.0",
+    "expo": "^48.0.4",
+    "expo-device": "~5.2.1",
+    "expo-file-system": "~15.2.2",
+    "expo-haptics": "~12.2.1",
+    "expo-image": "~1.0.0",
+    "expo-local-authentication": "~13.2.1",
+    "expo-notifications": "~0.18.1",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.2",
-    "expo-web-browser": "~12.0.0",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-fast-image": "^8.6.3",
+    "expo-web-browser": "~12.1.1",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-paper": "^5.1.4",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
