--- a/app.json
+++ b/app.json
@@ -22,11 +22,11 @@
         "NSNotificationsUsageDescription": "Recevez des notifications pour être informé des nouvelles notes."
       },
       "bundleIdentifier": "fr.hugofnm.unicenotes",
-      "buildNumber": "8"
+      "buildNumber": "2.2.0"
     },
     "android": {
       "package": "fr.hugofnm.unicenotes",
-      "versionCode": "3"
+      "versionCode": 3
     },
     "extra": {
       "eas": {
