--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-notifications": "~0.18.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "~2.2.1",
     "expo-web-browser": "~12.1.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
