--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@expo/config-plugins": "~6.0.0",
+    "@howljs/calendar-kit": "^1.13.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@shopify/flash-list": "1.4.0",
     "expo": "^48.0.4",
     "expo-device": "~5.2.1",
     "expo-file-system": "~15.2.2",
@@ -22,10 +25,13 @@
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.2.1",
+    "expo-task-manager": "~11.1.1",
     "expo-web-browser": "~12.1.1",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.1.4",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
   },
