--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-haptics": "~12.2.1",
     "expo-image": "~1.2.3",
     "expo-local-authentication": "~13.3.0",
+    "expo-network": "~5.2.1",
     "expo-notifications": "~0.18.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.2",
