--- a/package.json
+++ b/package.json
@@ -10,35 +10,38 @@
   },
   "dependencies": {
     "@bugsnag/expo": "^48.1.0",
-    "@expo/config-plugins": "~6.0.0",
+    "@expo/config-plugins": "~7.2.2",
     "@howljs/calendar-kit": "^1.13.2",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
-    "@shopify/flash-list": "1.4.0",
-    "expo": "^48.0.4",
-    "expo-application": "~5.1.1",
-    "expo-constants": "~14.2.1",
-    "expo-crypto": "~12.2.1",
-    "expo-device": "~5.2.1",
-    "expo-file-system": "~15.2.2",
-    "expo-haptics": "~12.2.1",
-    "expo-image": "~1.2.3",
-    "expo-local-authentication": "~13.3.0",
-    "expo-network": "~5.2.1",
-    "expo-notifications": "~0.18.1",
-    "expo-secure-store": "~12.1.1",
-    "expo-status-bar": "~1.4.2",
-    "expo-system-ui": "~2.2.1",
-    "expo-web-browser": "~12.1.1",
+    "@shopify/flash-list": "1.4.3",
+    "expo": "49.0.0",
+    "expo-application": "~5.3.0",
+    "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-device": "~5.4.0",
+    "expo-dynamic-app-icon": "^1.2.0",
+    "expo-file-system": "~15.4.2",
+    "expo-haptics": "~12.4.0",
+    "expo-image": "~1.3.2",
+    "expo-insights": "~0.2.0",
+    "expo-linking": "~5.0.2",
+    "expo-local-authentication": "~13.4.1",
+    "expo-network": "~5.4.0",
+    "expo-notifications": "~0.20.1",
+    "expo-secure-store": "~12.3.1",
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.1.4",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
