--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "unicenotes",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,7 +16,7 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@shopify/flash-list": "1.4.3",
-    "expo": "49.0.0",
+    "expo": "~49.0.6",
     "expo-application": "~5.3.0",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
@@ -32,6 +31,7 @@
     "expo-network": "~5.4.0",
     "expo-notifications": "~0.20.1",
     "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
