--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "UniceNotes",
     "slug": "unicenotes",
-    "version": "1.3.2",
+    "version": "1.4.0",
     "githubUrl": "https://github.com/UniceApps/UniceNotes",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -24,11 +24,11 @@
         "CFBundleDevelopmentRegion": "fr"
       },
       "bundleIdentifier": "fr.hugofnm.unicenotes",
-      "buildNumber": "4.2.2"
+      "buildNumber": "5.0.2"
     },
     "android": {
       "package": "fr.hugofnm.unicenotes",
-      "versionCode": 13
+      "versionCode": 14
     },
     "extra": {
       "eas": {
@@ -48,12 +48,20 @@
             "image": "./assets/icon.png", // icon path
             "prerendered": false
           },
+          "magnet": {
+            "image": "./assets/icons/icon_magnet.png",
+            "prerendered": false
+          },
           "ardente": {
             "image": "./assets/icons/icon_ardente.png",
             "prerendered": false
           },
           "beach": {
             "image": "./assets/icons/icon_beach.png",
+            "prerendered": false
+          },
+          "glitched": {
+            "image": "./assets/icons/icon_glitched.png",
             "prerendered": false
           },
           "melted": {
