--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@bugsnag/expo": "^48.1.0",
     "@expo/config-plugins": "~7.2.2",
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@howljs/calendar-kit": "^1.13.2",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/netinfo": "9.3.10",
@@ -22,7 +23,8 @@
     "expo-crypto": "~12.4.1",
     "expo-device": "~5.4.0",
     "expo-dynamic-app-icon": "^1.2.0",
-    "expo-file-system": "~15.4.2",
+    "expo-file-system": "~15.4.4",
+    "expo-font": "~11.4.0",
     "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.2",
     "expo-insights": "~0.2.0",
@@ -35,8 +37,9 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.1.4",
     "react-native-reanimated": "~3.3.0",
