--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@bugsnag/expo": "^48.1.0",
+    "@bugsnag/expo": "^49.0.0",
     "@expo/config-plugins": "~7.2.2",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@howljs/calendar-kit": "^1.13.2",
@@ -33,18 +33,20 @@
     "expo-network": "~5.4.0",
     "expo-notifications": "~0.20.1",
     "expo-secure-store": "~12.3.1",
+    "expo-sharing": "~11.5.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.1.4",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-view-shot": "3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
