--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@shopify/flash-list": "1.4.3",
     "expo": "~49.0.6",
     "expo-application": "~5.3.0",
+    "expo-av": "~13.4.1",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-device": "~5.4.0",
@@ -26,7 +27,7 @@
     "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
     "expo-haptics": "~12.4.0",
-    "expo-image": "~1.3.4",
+    "expo-image": "~1.3.5",
     "expo-insights": "~0.2.0",
     "expo-linking": "~5.0.2",
     "expo-local-authentication": "~13.4.1",
