--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "expo-crypto": "~12.4.1",
     "expo-device": "~5.4.0",
     "expo-dynamic-app-icon": "^1.2.0",
-    "expo-file-system": "~15.4.4",
+    "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.5",
+    "expo-image-picker": "~14.3.2",
     "expo-insights": "~0.2.0",
     "expo-linking": "~5.0.2",
     "expo-local-authentication": "~13.4.1",
