--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-sharing": "~11.5.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "expo-store-review": "~6.4.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "lottie-react-native": "5.1.6",
@@ -48,7 +49,8 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-view-shot": "3.7.0"
+    "react-native-view-shot": "3.7.0",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
