--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-view-shot": "3.7.0",
-    "react-native-webview": "13.2.2"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-view-shot": "3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@bugsnag/plugin-expo-eas-sourcemaps": "^48.1.0",
     "@bugsnag/source-maps": "^2.3.1"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@4.0.2"
 }
