--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unicenotes",
-  "version": "1.0.0",
+  "version": "1.5.2",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -8,49 +8,50 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@bugsnag/expo": "^49.0.0",
-    "@expo/config-plugins": "~7.2.2",
+    "@bugsnag/expo": "^50.0.0",
+    "@expo/config-plugins": "~7.8.0",
+    "@expo/fingerprint": "^0.6.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@howljs/calendar-kit": "^1.13.2",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/netinfo": "9.3.10",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
-    "@shopify/flash-list": "1.4.3",
-    "expo": "~49.0.6",
-    "expo-application": "~5.3.0",
-    "expo-av": "~13.4.1",
-    "expo-constants": "~14.4.2",
-    "expo-crypto": "~12.4.1",
-    "expo-device": "~5.4.0",
+    "@shopify/flash-list": "1.6.3",
+    "expo": "~50.0.6",
+    "expo-application": "~5.8.3",
+    "expo-av": "~13.10.5",
+    "expo-constants": "~15.4.5",
+    "expo-crypto": "~12.8.0",
+    "expo-device": "~5.9.3",
     "expo-dynamic-app-icon": "^1.2.0",
-    "expo-file-system": "~15.4.5",
-    "expo-font": "~11.4.0",
-    "expo-haptics": "~12.4.0",
-    "expo-image": "~1.3.5",
-    "expo-image-picker": "~14.3.2",
-    "expo-insights": "~0.2.0",
-    "expo-linking": "~5.0.2",
-    "expo-local-authentication": "~13.4.1",
-    "expo-network": "~5.4.0",
-    "expo-notifications": "~0.20.1",
-    "expo-secure-store": "~12.3.1",
-    "expo-sharing": "~11.5.0",
-    "expo-splash-screen": "~0.20.4",
-    "expo-status-bar": "~1.6.0",
-    "expo-store-review": "~6.4.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-web-browser": "~12.3.2",
-    "lottie-react-native": "5.1.6",
+    "expo-file-system": "~16.0.6",
+    "expo-font": "~11.10.2",
+    "expo-haptics": "~12.8.1",
+    "expo-image": "~1.10.6",
+    "expo-image-picker": "~14.7.1",
+    "expo-insights": "~0.6.1",
+    "expo-linking": "~6.2.2",
+    "expo-local-authentication": "~13.8.0",
+    "expo-network": "~5.8.0",
+    "expo-notifications": "~0.27.6",
+    "expo-secure-store": "~12.8.1",
+    "expo-sharing": "~11.10.0",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-store-review": "~6.8.3",
+    "expo-system-ui": "~2.9.3",
+    "expo-web-browser": "~12.8.2",
+    "lottie-react-native": "6.5.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.1.4",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-view-shot": "3.7.0"
+    "react-native-view-shot": "3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
