--- a/package.json
+++ b/package.json
@@ -9,52 +9,52 @@
   },
   "dependencies": {
     "@bugsnag/expo": "^50.0.0",
-    "@expo/config-plugins": "~7.8.0",
+    "@expo/config-plugins": "~8.0.0",
     "@expo/fingerprint": "^0.6.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@howljs/calendar-kit": "^1.13.2",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/netinfo": "11.1.0",
+    "@hugofnm/expo-dynamic-app-icon": "^1.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
-    "@shopify/flash-list": "1.6.3",
-    "expo": "~50.0.6",
-    "expo-application": "~5.8.3",
-    "expo-av": "~13.10.5",
-    "expo-constants": "~15.4.5",
-    "expo-crypto": "~12.8.0",
-    "expo-device": "~5.9.3",
-    "expo-dynamic-app-icon": "^1.2.0",
-    "expo-file-system": "~16.0.6",
-    "expo-font": "~11.10.2",
-    "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-insights": "~0.6.1",
-    "expo-linking": "~6.2.2",
-    "expo-local-authentication": "~13.8.0",
-    "expo-network": "~5.8.0",
-    "expo-notifications": "~0.27.6",
-    "expo-secure-store": "~12.8.1",
-    "expo-sharing": "~11.10.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-store-review": "~6.8.3",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
-    "lottie-react-native": "6.5.1",
+    "@shopify/flash-list": "1.6.4",
+    "expo": "~51.0.5",
+    "expo-application": "~5.9.1",
+    "expo-av": "~14.0.4",
+    "expo-constants": "~16.0.1",
+    "expo-crypto": "~13.0.2",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.5",
+    "expo-haptics": "~13.0.1",
+    "expo-image": "~1.12.9",
+    "expo-image-picker": "~15.0.4",
+    "expo-insights": "~0.7.0",
+    "expo-linking": "~6.3.1",
+    "expo-local-authentication": "~14.0.1",
+    "expo-network": "~6.0.1",
+    "expo-notifications": "~0.28.1",
+    "expo-secure-store": "~13.0.1",
+    "expo-sharing": "~12.0.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-store-review": "~7.0.2",
+    "expo-system-ui": "~3.0.4",
+    "expo-web-browser": "~13.0.3",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.1.4",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-view-shot": "3.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.24.0",
     "@bugsnag/plugin-expo-eas-sourcemaps": "^48.1.0",
     "@bugsnag/source-maps": "^2.3.1"
   },
