--- a/package.json
+++ b/package.json
@@ -19,39 +19,41 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@shopify/flash-list": "1.6.4",
-    "expo": "~51.0.5",
+    "expo": "~51.0.22",
     "expo-application": "~5.9.1",
-    "expo-av": "~14.0.4",
-    "expo-constants": "~16.0.1",
+    "expo-av": "~14.0.6",
+    "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.5",
     "expo-haptics": "~13.0.1",
-    "expo-image": "~1.12.9",
-    "expo-image-picker": "~15.0.4",
+    "expo-image": "~1.12.13",
+    "expo-image-picker": "~15.0.7",
     "expo-insights": "~0.7.0",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
     "expo-network": "~6.0.1",
-    "expo-notifications": "~0.28.1",
-    "expo-secure-store": "~13.0.1",
+    "expo-notifications": "~0.28.11",
+    "expo-quick-actions": "^2.0.0",
+    "expo-secure-store": "~13.0.2",
     "expo-sharing": "~12.0.1",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-store-review": "~7.0.2",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.1.4",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-view-shot": "3.8.0"
+    "react-native-view-shot": "3.8.0",
+    "expo-dev-client": "~4.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
