--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "unicenotes",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eas-build-on-success": "npx bugsnag-eas-build-on-success"
   },
   "dependencies": {
     "@bugsnag/expo": "^50.0.0",
@@ -24,6 +25,7 @@
     "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.26",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
@@ -34,7 +36,7 @@
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
     "expo-network": "~6.0.1",
-    "expo-notifications": "~0.28.16",
+    "expo-notifications": "~0.28.17",
     "expo-quick-actions": "^2.0.0",
     "expo-secure-store": "~13.0.2",
     "expo-sharing": "~12.0.1",
@@ -52,8 +54,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-view-shot": "3.8.0",
-    "expo-dev-client": "~4.0.26"
+    "react-native-view-shot": "3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
